@@ -5167,7 +5167,7 @@ function setStylesheet(s,id)
 	<div id="contentStash"></div>
 	<div id="storeArea"><div tiddler="BibleConfiguration" modifier="GabrielBurca" modified="200804250612" created="200610280459" tags="DreamBeam">On a reasonably fast PC, DreamBeam allows the user to search for Bible verses in real-time. In order to provide this functionality, a copy of the relevant Bible texts (translations) needs to be cached by DreamBeam and optimized for searching. Using the SWORD project for real-time searching is very slow, even on fast PCs, thus the need for this procedure. To achieve this caching, user intervention is required.\n\n* Ensure that DreamBeam can communicate with SWORD:\n** Select the &quot;Sermon Tool&quot; and create a new document (clicking on the &quot;New Document&quot; button)\n** Select one of the available translations from the &quot;Translation&quot; drop-down box (SWORD comes with some non-Bible text such as Robinson. Make sure a valid Bible translation is selected)\n** Enter a verse reference in the &quot;Find Verse&quot; text box (such as: &quot;Mat 1:1&quot;)\n** If the selected verse does not appear in the newly created document, ensure the SWORD project is properly installed and that DreamBeam knows where to find it (see the ''Bible'' tab in the ''Edit -&gt; Options'' dialog box)\n* The Bible text should now be optimized for searching. The idea is to replace with plain ASCII characters all of the characters and punctuation that is difficult to remember (and to type). Take for example the German translation of Mat 2:5 and the KJV translation of Mat 2:6:\n\n*** //Sie antworteten: »In Bethlehem, im Land Judäa. So heißt es schon im Buch des Propheten://\n*** //Sie antworteten In Bethlehem im Land Judaa So heisst es schon im Buch des Propheten//\n\n*** //And thou Bethlehem, in the land of Juda, art not the least among the princes of Juda: for out of thee shall come a Governor, that shall rule my people Israel.//\n*** //And thou Bethlehem in the land of Juda art not the least among the princes of Juda for out of thee shall come a Governor that shall rule my people Israel//\n\n** In each of the pairs above, the first version above is the //original// and the second version has been edited for easy real-time searching. Notice how all the punctuation marks have been removed, and how characters that are not easily typed on the keyboard have been replaced with their ASCII equivalents. If there is no conversion done, to locate Mat 2:6 in the German Bible, the user would have to remember the punctuation and type exactly &quot;antworteten: »In Bethlehem&quot; instead of &quot;antworteten In Bethlehem&quot;. \n** For the KJV translation, the user would have to remember the placement of the commas and search for &quot;Bethlehem, in the land of Juda&quot; instead of simply &quot;Betlehem in the land of Juda&quot;.\n\n* Two options are available to accomplish this.\n** Option 1: The easy way\n*** Open the ''Edit -&gt; Options'' dialog box and on the &quot;Bible Cache&quot; tab select the &quot;Default&quot; radio button in the &quot;Replacement type&quot; group box.\n*** The &quot;Default&quot; option will attempt to strip all diacritics and punctuation from the text which is what you probably want. You should choose this option unless it doesn't meet your needs and you want to use custom RegEx for the search-n-replace.\n** Option 2:\n*** Open the ''Edit -&gt; Options'' dialog box and on the &quot;Bible Cache&quot; tab select the &quot;Custom&quot; radio button in the &quot;Replacement type&quot; group box.\n*** Fill in the &quot;Replacements when searching&quot; table. Instead of trying to guess what replacements the user would like to make (especially in light of all the possible Bible languages and translations), this table allows the user to decide what replacements to make.\n*** The text in the ''Find'' column is a RegEx that DreamBeam will attempt to match and replace with the text in the ''Replace'' column. Each row in this table is applied to every Bible verse in sequential order. To perform the conversion shown above for the German verse, the table would look like the following:\n\n|!Find|!Replace|!Explanation|\n|[Ää]|a|Case is irrelevant, so either of the two characters in the first column is replaced with ''a''|\n|etc...|etc...|More replacements here ...|\n|[^~A-Za-z0-9 ]||Any character //not// in the A-Z or a-z or 0-9 range or ''space'' is removed|\n\n\n* Once you've selected ''Option 1'' or ''Option 2'', click on the ''+'' sign to the left of the translation that needs to be cached. You should only cache the translations you intend to use.\n* Clicking on the ''-'' sign in the &quot;Cached translations&quot; column removes that translation from the list of usable Bibles until it is again cached.</div>
 <div tiddler="BibleUse" modifier="GabrielBurca" modified="200610280745" created="200610280720" tags="DreamBeam">* The BibleConfiguration steps must be followed to prepare the Bible texts and make them available before attempting to use the features on the Bible tab.\n* The ''Search'' drop-down box accepts a RegEx that is used to find the first verse containing a match. The matched expression is highlighted in red.\n** For example, to locate the KJV verse in Mat 2:6 used in the BibleConfiguration example, the user can type:\n*** //bethlehem.*princes//\n* The 4 arrow buttons will locate the Next, Previous, First, or Last matching verse respectively.\n* The ''Bookmark'' button will save the verse containing the match (or the cursor) for easy recall. Right-clicking on the bookmark will delete it.\n* The ''Verse'' drop-down box is specialized to find Bible references. The following table shows some usage examples.\n\n|!Text entered|!Verse found|!Explanation|\n|jonah 2:3|Jonah 2:3|Capitalization is irrelevant|\n|jonah 2 3|Jonah 2:3|A colon is not required|\n|j 2 3|Joshua 2:3|If a partial book name is used, the first book that matches is used|\n|jo 2 3|Joshua 2:3||\n|jon 2 3|Jonah 2:3||\n|jon 2|Jonah 2:1|If the verse number is not specified, verse 1 is assumed|\n\n</div>
-<div tiddler="ChangeLog" modifier="GabrielBurca" modified="200804250533" created="200803221859" tags="">! Plans for the next version\n* Allow for more stream-lined per-song themes\n* Allow user to send theme updates to the live screen while in the middle of updating a theme\n* Provide (at a minimum) the file name of the previewed image when in the Multimedia tab\n* Expand the theme support to include a custom background to be used when no text is being displayed\n\n! Version 0.81\n* See the UpgradeInstructions\n* Fixed the encoding of text obtained from Sword (completely replaced the old Sword interface)\n* Reduced the size of the bible cache by 50% compared to 0.80.\n* Added a shortcut to the SongShow tab. A double-click on a verse/chorus will send it directly to the live screen, just like the single-click on the big red dot.\n* Fixed the progress bar for caching bible texts.\n* Optimized the bible caching code.\n* Added an option to do &quot;default&quot; replacements when caching a bible text.\n* Fixed a major bug in 0.80 triggered when trying to create a new song.\n\n! Version 0.80\n* Added ThemeHandling\n* Added MS-Vista compatibility. User created files are now saved in the DataDirectory and the installer has been updated to deal with UAC. Thanks to Dani Baies for helping with the installer portion and for testing it.\n* Improved word-break when displaying Bible verses. In the past, the word-break (line wrap) was left up to the .NET framework which did not handle things properly. This version uses a custom line wrap algorithm which only breaks lines at spaces.\n* Added separate theme setting/entry for the key and author data in a song.\n* Improved string folding (the ability to remove diacritics from text for easier search).\n* Improved multimedia controls.\n* Fixed a number of threading issues where non-UI threads were modifying UI controls\n* Fixed localization code so it falls back to English if a translation item for the selected language is not available\n* Added consistent handling of file/path locations\n* Font size is now resolution independent so a 36pt font should look the same on 800x600 and 1600x1200 displays\n* Removed dependency on OPaC which was not re-painting labels properly anymore (maybe due to .NET 2.0)\n* Added the source code for ~LEDRadioButton and fixed it so it works properly with the visual designer\n* Upgraded project to VS C# 2005\n* Massive code clean-up and reorganization, including:\n** All BibleText controls were moved out of MainForm.cs into BibleText.cs\n** All designer code was removed from MainForm.cs\n** A lot of dead code and files were removed</div>
+<div tiddler="ChangeLog" modifier="GabrielBurca" modified="200804260505" created="200803221859" tags="">! Plans for the next version\n* Allow for more stream-lined per-song themes\n* Allow user to send theme updates to the live screen while in the middle of updating a theme\n* Provide (at a minimum) the file name of the previewed image when in the Multimedia tab\n* Expand the theme support to include a custom background to be used when no text is being displayed\n\n! Version 0.81\n* See the UpgradeInstructions\n* Fixed the encoding of text obtained from Sword (completely replaced the old Sword interface)\n* Reduced the size of the bible cache by 50% compared to 0.80.\n* Added a shortcut to the SongShow tab. A double-click on a verse/chorus will send it directly to the live screen, just like the single-click on the big red dot.\n* Fixed the progress bar for caching bible texts.\n* Optimized the bible caching code.\n* Added an option to do &quot;default&quot; replacements when caching a bible text.\n* Fixed a major bug in 0.80 triggered when trying to create a new song.\n* Added (back) a test image when the user selects the size/position button.\n\n! Version 0.80\n* Added ThemeHandling\n* Added MS-Vista compatibility. User created files are now saved in the DataDirectory and the installer has been updated to deal with UAC. Thanks to Dani Baies for helping with the installer portion and for testing it.\n* Improved word-break when displaying Bible verses. In the past, the word-break (line wrap) was left up to the .NET framework which did not handle things properly. This version uses a custom line wrap algorithm which only breaks lines at spaces.\n* Added separate theme setting/entry for the key and author data in a song.\n* Improved string folding (the ability to remove diacritics from text for easier search).\n* Improved multimedia controls.\n* Fixed a number of threading issues where non-UI threads were modifying UI controls\n* Fixed localization code so it falls back to English if a translation item for the selected language is not available\n* Added consistent handling of file/path locations\n* Font size is now resolution independent so a 36pt font should look the same on 800x600 and 1600x1200 displays\n* Removed dependency on OPaC which was not re-painting labels properly anymore (maybe due to .NET 2.0)\n* Added the source code for ~LEDRadioButton and fixed it so it works properly with the visual designer\n* Upgraded project to VS C# 2005\n* Massive code clean-up and reorganization, including:\n** All BibleText controls were moved out of MainForm.cs into BibleText.cs\n** All designer code was removed from MainForm.cs\n** A lot of dead code and files were removed</div>
 <div tiddler="CommandLineArguments" modifier="GabrielBurca" modified="200611011810" created="200610280248" tags="DreamBeam">A number of command line arguments are available for more advanced users. An easy way to use these command line arguments is to create multiple shortcuts to the DreamBeam executable, and modify the shortcut ''Target:'' (right click on the shortcut and select ''Properties'' from the pop-up menu) to append the desired command line arguments.\n\n* ''-config'' //config_name//\n** This argument allows the user to run DreamBeam with different configurations. One configuration can be used for a traditional service, while another one can be used for a contemporary service.\n** Alternatively, if the PC that DreamBeam is running on has multiple video outputs, it is possible to run multiple instances of DreamBeam, one per video output. This makes it possible to use a single PC with multiple outputs to display different information on different outputs simultaneously. For example, the audience can be shown one thing, while the choir members (or worship team) can be shown something else. When used in this configuration, make sure you don't start all instances of DreamBeam at the same time. All running instances share the same bible cache (see the [[bible configuration|BibleConfiguration]] section for details) and read it at start-up, but only one instance can be reading at a time. It is safe to start the next instance once the splash-screen from the previous instance is gone.\n** DreamBeam will save all the settings made in the ''Edit''-&gt;''Options'' dialog box to a file named //config_name//.config.xml, and layout setting (the location of the various tabs, etc...) to files named //config_name//.Tab_???.xml\n\n* ''-log''\n** When this argument is used, DreamBeam will log various types of errors and/or exceptions to a log file in the directory containing the executable. Errors that happen before the ''-config'' option is handled will be written to a file named ''~LogFile.txt''. Once the application knows what configuration it is running with, it will log things to a file named //config//.~LogFile.txt, where //config// is the name of the configuration.\n\n* ''-console''\n** This option opens a console window for DreamBeam and sends all kinds of verbose debugging information to that console. Non-developers will have limited use for this option. For developers, this console will be used by the ''Console.Write'' and ''Console.~WriteLine'' methods.</div>
 <div tiddler="DataDirectory" modifier="GabrielBurca" modified="200804160511" created="200803221836" tags="">The DataDirectory is where all the user-generated DreamBeam files (such as songs and themes) are saved. The DataDirectory being used by DreamBeam can be seen in the &quot;Common Settings&quot; tab of the Options dialog box.\n\nThis directory is configurable by the user during the installation phase. Its location is saved in the registry key: HKLM\sSoftware\sDreamBeam\sUserFilesDir</div>
 <div tiddler="DefaultTiddlers" modifier="GabrielBurca" modified="200611020605" created="200609181917" tags="">DreamBeamTOC</div>
