@@ -7,8 +7,10 @@ Gabriel Burca:
   it directly to the live screen, just like the single-click on the big red dot.
 - Fixed the progress bar for caching bible texts.
 - Optimized the bible caching code.
-- Added an option to do "default" replacements when caching a bible text.
+- Added an option to do "default" replacements when caching a bible text
+  (see the help file for details)
 - Fixed a major bug in 0.80 triggered when trying to create a new song.
+- Added (back) a test image when the user selects the size/position button.
 
 0.80
 Gabriel Burca:
